[package]
name = "sshe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
home = "0.5.9"
ratatui = "0.27.0"
tui-textarea = "0.5.1"
